shm_open instead of open

--- a/prototypes/Makefile
+++ b/prototypes/Makefile
@@ -2,6 +2,7 @@
 CXXFLAGS = -Wall -Wextra -Wpedantic -Weffc++ -std=c++11 -O2
 OBJECTS=vecadd.o
 TARGETS=vecadd
+LIB = -lrt
 
 all: $(TARGETS)
 
@@ -9,7 +10,7 @@ all: $(TARGETS)
 	g++ $(CXXFLAGS) $^ -c -o $@
 
 vecadd: $(OBJECTS)
-	g++ $(CXXFLAGS) $^ -o $@
+	g++ $(CXXFLAGS) $^ -o $@ $(LIB)
 
 clean:
 	rm -f $(TARGETS)
